agregando modificaciones al ejercicio 6 - formularios validaciones

--- a/index6.html
+++ b/index6.html
@@ -24,8 +24,8 @@
                 <tr>
                     <td>RUT</td>    
                     <td>
-                        <input tabindex="3" type="radio" name="id" value="chileno" required /><strong>C</strong>
-                        <input type="radio" name="id" value="extranjero" required /><strong>E</strong>
+                        <input tabindex="3" type="radio" name="id" value="chileno" /><strong>C</strong>
+                        <input type="radio" name="id" value="extranjero" /><strong>E</strong>
                         <input tabindex="4" type="text" name="rut" placeholder="Ingrse su RUT con solo numeros" autofocus="autofocus" required="required" maxlength="9" pattern="[0-9]{6,8}" class="rut"/>  
                     </td>                    
                 </tr>  
