agregando formaulario con estilos al ejercicio 7

--- a/Ejercicio_7/index7.html
+++ b/Ejercicio_7/index7.html
@@ -15,10 +15,10 @@
             <input type="text" class="input_apellido" name="apellido" id="apellido" placeholder="Ingrese el Apellido" required autofocus>
             <input type="email" class="input_correo" name="correo" id="correo" placeholder="Ingrese el Correo Eléctronico" required autofocus>
             <input type="text" class="input_usuario" name="usuario" id="usuario" placeholder="Ingrese el Usuario" required autofocus>
-            <input type="password" class="input_clave" name="clave" id="clave" placeholder="Ingrese la Clave del Usuario" required autofocus>
-            <input type="text" class="input_telefono" name="telefono" id="telefono" placeholder="telefono" required autofocus>
+            <input type="password" class="input_clave" name="clave" id="clave" placeholder="Ingrese Clave de Usuario" required autofocus>
+            <input type="text" class="input_telefono" name="telefono" id="telefono" placeholder="Ingrese el Número Telefónico" required autofocus>
             <input type="submit" class="input_enviar" id="enviar" value="Registrar">
-
+            <p class="info">¿Tienes una cuenta? <a href="#">Ingresa a aquì</a></p>
         </div>
     </form>
 </body>
