agregando JS al ejercicio 7

--- a/Ejercicio_7/index7.html
+++ b/Ejercicio_7/index7.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Formulario de Registro</h1>
-    <form action="#" method="post" class="formulario_registro">
+    <form action="#" method="post" class="formulario_registro" onsubmit="return validando();">
         <h2 class="titulo_h1">CREA UNA CUENTA</h2>
         <div class="contenedorInputs">
             <input type="text" class="input_nombre" name="nombre" id="nombre" placeholder="Ingrese el Nombre" required autofocus>
@@ -21,5 +21,6 @@
             <p class="info">¿Tienes una cuenta? <a href="#">Ingresa a aquì</a></p>
         </div>
     </form>
+    <script src="js/script7.js"></script>
 </body>
 </html>
