agregando estilos al ejercicio 8

--- a/Ejercicio_8/index.html
+++ b/Ejercicio_8/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Formulario</h1>
-    <form class="formulario">
+    <form class="formulario" id="formulario">
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputEmail4">Email</label>
@@ -55,7 +55,12 @@
             </label>
           </div>
         </div>
-        <button type="submit" class="btn btn-primary">Sign in</button>
+        <div class="form-group">
+            <label for="exampleFormControlTextarea1">Example textarea</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <button type="button" class="btn btn-primary" id="enviar">Sign in</button>
+        <button type="button" class="btn btn-primary" id="limpiar">Reset</button>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
