agregando JS Ejercicio 8

--- a/Ejercicio_8/index.html
+++ b/Ejercicio_8/index.html
@@ -59,7 +59,7 @@
             <label for="exampleFormControlTextarea1">Example textarea</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
-        <button type="button" class="btn btn-primary" id="enviar">Sign in</button>
+        <button type="button" class="btn btn-primary" id="enviar">Send</button>
         <button type="button" class="btn btn-primary" id="limpiar">Reset</button>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
