--- a/Ejercicio_8/index.html
+++ b/Ejercicio_8/index.html
@@ -14,7 +14,7 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control" id="inputEmail4">
+            <input type="email" class="form-control" id="inputEmail4" placeholder="correo@correo.com">
           </div>
           <div class="form-group col-md-6">
             <label for="inputPassword4">Password</label>
