--- a/index5.html
+++ b/index5.html
@@ -10,7 +10,7 @@
     <!-- Ejercicio Básico - 4 -->
     <main class="contenedor">
         <h1>Ingresando datos</h1>
-        <form onsubmit="validarFormaulario()" class="formulario">
+        <form onsubmit="return validarFormaulario()" class="formulario">
             <label for="nombre">Ingrese el Primer Nombre:</label>
             <input type="text" name="nombre" id="nombre" placeholder="Primer nombre" required minlength="2" maxlength="15">
             <label for="apellido">Ingrese el Primer Apellido</label>
