--- a/index4.html
+++ b/index4.html
@@ -22,6 +22,10 @@
             <input type="submit" value="Enviar" class="enviar" id="enviar">
         </form>
     </main>
-    <script src="js/script4.js"></script>
+    <script>
+        function validarFormaulario() {  
+            alert("en el formulario");
+        }
+    </script>
 </body>
 </html>
