--- a/index7.html
+++ b/index7.html
@@ -7,6 +7,19 @@
 </head>
 <body>
     <h1>Metodos</h1>
+
+    <table>
+        <tbody>
+            <tr>
+                <td>Nombre</td>
+                <td>Apellido</td>
+            </tr>
+            <tr>
+                <td><span id="muestra1"></span></td>
+            </tr>
+        </tbody>
+    </table>
+
     <script src="js/script7.js"></script>
 </body>
 </html>
