--- a/Ejercicio_9/index.html
+++ b/Ejercicio_9/index.html
@@ -33,8 +33,8 @@
             <tr>
                 <td>Sexo : </td>
                 <td>
-                    <input type="radio" name="sexo" value="H" checked /> Hombre
-                    <input type="radio" name="sexo" value="M" /> Mujer
+                    <input type="radio" name="sexo" value="H" checked id="sexo"/> Hombre
+                    <input type="radio" name="sexo" value="M" id="sexo"/> Mujer
                 </td>
             </tr>
             <tr>
