--- a/Ejercicio_9/index.html
+++ b/Ejercicio_9/index.html
@@ -7,8 +7,8 @@
     <title>Formulario Validado JS</title>
 </head>
 <body>
-    <h1>Formulario</h1>
-    <form id="formulario">
+    <h1>Formulario Ejemplo</h1>
+    <form id="formulario" class="formulario">
         <table>
             <tr>
                 <td>Nombre: </td>
@@ -33,8 +33,8 @@
             <tr>
                 <td>Sexo : </td>
                 <td>
-                    <input type="radio" name="sexo" value="H" checked /> Hombre
-                    <input type="radio" name="sexo" value="M" /> Mujer
+                    <input type="radio" name="sexo" value="H" id="sexo" checked /> Hombre
+                    <input type="radio" name="sexo" value="M" id="sexo"/> Mujer
                 </td>
             </tr>
             <tr>
@@ -42,8 +42,6 @@
                 <td>
                     <input type="checkbox" name="mayor" id="mayor" checked/>
                 </td>
-            </tr>
-            </td>
             </tr>
         </table>
         <p>
