trabajando con el DOM en el ejercicio 11

--- a/Ejercicio_11/index.html
+++ b/Ejercicio_11/index.html
@@ -7,7 +7,21 @@
     <title>DOM</title>
 </head>
 <body>
-    
+    <h1>Trabajando en el DOM</h1>
+    <main id="principal">
+        <p id="p1">Texto en el Parrafo 1</p>
+        <p id="p2">Texto en el Parrafo 2</p>
+        <p id="p3" class="parrafo">Texto en el Parrafo 3</p>
+        <p id="p4" class="otra_clase">Texto en el Parrafo 4</p>
+        <p id="p5" class="otra_clase">Texto en el Parrafo 5</p>
+        Nombre: <input name="nombre" type="text" value="Juan"><br>
+        Apellido: <input name="nombre" type="text" value="Duran">
+    </main>
+    <button id="cambiar_Texto">Cambiar el texto en los parrafos</button>
+    <button id="cambiar_Clase">Cambiar las clases a los parrafos</button>
+    <button id="quitar_Clase">Quitando las clases a todos los parrafos</button>
+
+    <!-- Llamando al JS -->
     <script src="js/script.js"></script>
 </body>
 </html>
