final del ejercicio 11 DOM HTML JS

--- a/Ejercicio_11/index.html
+++ b/Ejercicio_11/index.html
@@ -14,8 +14,8 @@
         <p id="p3" class="parrafo">Texto en el Parrafo 3</p>
         <p id="p4" class="otra_clase">Texto en el Parrafo 4</p>
         <p id="p5" class="otra_clase">Texto en el Parrafo 5</p>
-        Nombre: <input name="nombre" type="text" value="Juan"><br>
-        Apellido: <input name="nombre" type="text" value="Duran">
+        Nombre: <input name="nombre" type="text" value="Juan" id="entrada1"><br>
+        Apellido: <input name="nombre" type="text" value="Duran" id="entrada2">
     </main>
     <button id="cambiar_Texto">Cambiar el texto en los parrafos</button>
     <button id="cambiar_Clase">Cambiar las clases a los parrafos</button>
