--- a/Ejercicio_11/index.html
+++ b/Ejercicio_11/index.html
@@ -11,7 +11,7 @@
     <main id="principal">
         <p id="p1">Texto en el Parrafo 1</p>
         <p id="p2">Texto en el Parrafo 2</p>
-        <p id="p3" class="parrafo">Texto en el Parrafo 3</p>
+        <p id="p3" class="parrafo parrafo2 parrafo4">Texto en el Parrafo 3</p>
         <p id="p4" class="otra_clase">Texto en el Parrafo 4</p>
         <p id="p5" class="otra_clase">Texto en el Parrafo 5</p>
         Nombre: <input name="nombre" type="text" value="Juan" id="entrada1"><br>
