--- a/Ejercicio_11/index.html
+++ b/Ejercicio_11/index.html
@@ -10,7 +10,7 @@
     <h1>Trabajando en el DOM</h1>
     <main id="principal">
         <p id="p1">Texto en el Parrafo 1</p>
-        <p id="p2">Texto en el Parrafo 2</p>
+        <p id="p2" class="clase1 clase2 clase3">Texto en el Parrafo 2</p>
         <p id="p3" class="parrafo parrafo2 parrafo4">Texto en el Parrafo 3</p>
         <p id="p4" class="otra_clase">Texto en el Parrafo 4</p>
         <p id="p5" class="otra_clase">Texto en el Parrafo 5</p>
