Segunda parte de ejemplos

--- a/index11.html
+++ b/index11.html
@@ -9,6 +9,15 @@
             color: darkorange;
             background-color: aqua;
         }
+        .correcto {
+            background-color: rgb(146, 236, 194);
+            font-size: 18px;
+        }
+        .incorrecto {
+            background-color: rgb(238, 156, 156);
+            font-size: 18px;
+        }
+
     </style>
 </head>
 <body>
