agregando modificaciones a arreglos y objetos

--- a/index12.html
+++ b/index12.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Arreglos y Objetos en JS</h1>
+    <p>For en un Arreglo</p>
+    <section id="mostrar_ul"></section>
+    <section id="mostrar2_ul"></section>
     <script src="js/main2.js"></script>
 </body>
 </html>
